# Tag

./: CMakeLists.txt  make.sh  runtests.sh
inc/: base_controller.h  bullet_model.h  button_controller.h  button_hardware.h  gun_model.h  ir_controller.h  ir_rx_hardware.h  ir_tx_hardware.h  player_model.h
src/: CMakeLists.txt  bullet_model.cpp  button_controller.cpp  gun_model.cpp  ir_controller.cpp  player_model.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in  bullet_model_tests.cpp  button_controller_tests.cpp  gun_model_tests.cpp  ir_controller_tests.cpp  player_model_tests.cpp
tests/mocks/: button_hardware_mock.h  gun_model_mock.h  ir_rx_hardware_mock.h  ir_tx_hardware_mock.h  player_model_mock.h
